# flaretiming

./: .gitignore  CNAME  README.md  about.html  app.js  archive.html  blog.html  contact.html  defaults.dhall  disclaim.html  flaretiming.cabal  index.html  package.dhall  package.json  package.yaml  pandoc-solarized.css  site.sass  stack-dhall.yaml  stack.yaml  webpack.config.js  www-hakyll-flare-timing.cabal
css/: app.css  app.css.map  app.js  app.js.map  styles.css
posts/: 2015-08-23-example.html  2018-11-30-gap-in-latex 2.html  2018-11-30-gap-in-latex.html  2018-12-19-add-a-comp.html  2019-02-28-give-a-little.html  2019-03-01-points-fit-the-curve.html  2019-04-20-line-goal.html  2019-07-20-score-along.html
test-suite-hlint/: HLint.hs
www-hakyll/: about.rst  contact.markdown  disclaim.rst  index.html  site.hs
www-hakyll/posts/: 2018-11-30-gap-in-latex.markdown  2018-12-19-add-a-comp.markdown  2019-02-28-give-a-little.markdown  2019-02-28-give-a-little.rst  2019-03-01-points-fit-the-curve.markdown  2019-03-01-points-fit-the-curve.rst  2019-04-20-line-goal.markdown  2019-07-20-score-along.markdown  2020-03-30-open-source-fellow.rst
www-hakyll/templates/: default.html  post.html  title.html
