name:                flaretiming
version:             0.2.0
-- synopsis:
-- description:
homepage:            https://github.com/FlareTiming/flaretiming#readme
license:             MPL-2
license-file:        LICENSE
author:              Phil de Joux
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  hs-source-dirs:      www-hakyll
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
